basic css and html

--- a/index.html
+++ b/index.html
@@ -34,48 +34,47 @@
     <div id="parachute-container">
       <div id="parachute">
         <game-row class="parachute-row">
-          <parachute-row id="row1" style="text-align: center">
-            &nbsp;___<br />
-            &nbsp;/___\<br />
-            &nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;/<br />
-            &nbsp;\ /<br />
-            &nbsp;0<br />
-            &nbsp;/|\<br />
-            &nbsp;/ \<br />
+          <parachute-img id="img1" class="show">
+            ___<br />
+            /___\<br />
+            \&nbsp;&nbsp;&nbsp;&nbsp;/<br />
+            \ /<br />
+            0<br />
+            /|\<br />
+            / \<br />
+          </parachute-img>
+          <parachute-img id="img2" class="hide">
+            <br />
+            /___\<br />
+            \&nbsp;&nbsp;&nbsp;&nbsp;/<br />
+            \ /<br />
+            0<br />
+            /|\<br />
+            / \<br />
             ^^^^^^^<br
-          /></parachute-row>
-          <parachute-row id="row2">
+          /></parachute-img>
+          <parachute-img id="img3" class="hide">
             <br />
-            &nbsp;/___\<br />
-            &nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;/<br />
-            &nbsp;\ /<br />
-            &nbsp;0<br />
-            &nbsp;/|\<br />
-            &nbsp;/ \<br />
+            <br />
+            \&nbsp;&nbsp;&nbsp;&nbsp;/<br />
+            \ /<br />
+            0<br />
+            /|\<br />
+            / \<br />
             ^^^^^^^<br
-          /></parachute-row>
-          <parachute-row id="row3">
+          /></parachute-img>
+          <parachute-img id="img4" class="hide">
             <br />
             <br />
-            &nbsp;\&nbsp;&nbsp;&nbsp;&nbsp;/<br />
-            &nbsp;\ /<br />
-            &nbsp;0<br />
-            &nbsp;/|\<br />
-            &nbsp;/ \<br />
+            <br />
+            \ /<br />
+            0<br />
+            /|\<br />
+            / \<br />
             ^^^^^^^<br
-          /></parachute-row>
-          <parachute-row id="row4">
+          /></parachute-img>
+          <parachute-img id="img5" class="hide">
             <br />
-            <br />
-            <br />
-            &nbsp;\ /<br />
-            &nbsp;0<br />
-            &nbsp;/|\<br />
-            &nbsp;/ \<br />
-            ^^^^^^^<br
-          /></parachute-row>
-          <parachute-row id="row5"
-            ><br />
             <br />
             <br />
             <br />
@@ -83,7 +82,7 @@
             &nbsp;/|\<br />
             &nbsp;/ \<br />
             ^^^^^^^<br
-          /></parachute-row>
+          /></parachute-img>
         </game-row>
       </div>
     </div>
